syntax = "proto3";

option csharp_namespace = "Poc.Grcp";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
  HelloReplySubType helloReplySubType = 2;
  Response response = 3;
}

message HelloReplySubType {
	int32 messageInt = 1;
}

message Response {
	int32 status = 1;
	string errorMessage = 2;
	string notifications = 3;
}
